--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,11 +1,13 @@
 .main-button {
-    width: 300px;
-    background: rgb(17, 48, 127);
-    border: none;
-    border-radius: 6px;
-    font-size: 26px;
-    color: white;
-    cursor: pointer;
-  }
+  width: 300px;
+  height: fit-content;
+  padding: 20px;
+  background: rgb(17, 48, 127);
+  border: none;
+  border-radius: 6px;
+  font-size: 26px;
+  color: white;
+  cursor: pointer;
+}
 
   
