--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -1,10 +1,9 @@
-
-.input {
-    width: 250px;
-    height: 35px;
-      font-size: 13px;
-    padding: 6px 0 4px 10px;
+.input-component {
+    width: 300px;
+    height: 50px;
+    font-size: 18px;
+    padding: 12px;
+    outline: none;
     border: 1px solid black;
-    background: gainsboro;
-    border-radius: 8px;
+    border-radius: 4px;
   }
