--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -1,9 +1,20 @@
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
 .input-component {
-    width: 300px;
-    height: 50px;
-    font-size: 18px;
-    padding: 12px;
-    outline: none;
-    border: 1px solid black;
-    border-radius: 4px;
-  }
+  
+  width: 300px;
+  height: 50px;
+  font-size: 18px;
+  padding: 12px;
+  outline: none;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+.input-container > label {
+  font-size: 20px;
+}
