--- a/src/homeworks/HomeWork08/styles.css
+++ b/src/homeworks/HomeWork08/styles.css
@@ -1,30 +1,14 @@
-
-
-.password-card-container {
+.homework08-container {
     display: flex;
     flex-direction: column;
-    max-width: 300px;
-    height: 200px;
-    gap: 10px;
-    background-color: #f5f5f5;
-    border-radius: 8px ;
-}
-
-.animal-card-container > label {
-    margin-bottom: 5px;
-}
-
-.password-card-container > button {
-    margin-bottom: 5px;
-}
-
-.password-card-container > input {
-    padding: 8px;
-    width: 100%; 
-    margin-bottom: 10px;
-}
-
-.animal-card-container > h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
+    align-items: center;
+    gap: 30px;
+    flex: 1;
+    padding: 40px;
+    background-color: rgb(203, 188, 219);
+  }
+  .result-container {
+   font-size: 24px;
+   font-weight: bold;
+   color: rgb(46, 46, 75);
+  }
